--- a/templates/src/components/NavBarBlizzard/NavBarBlizzard.css
+++ b/templates/src/components/NavBarBlizzard/NavBarBlizzard.css
@@ -1,6 +1,10 @@
 .NavBarBlizzard{
-    height: 100%;
-    background-color: rgba(255, 255, 255, 0.5)
+    width: 100%;
+    position: relative;
+    top: 0px;
+    height: 60px;
+    background-color: rgba(255, 255, 255, 0.75);
+    z-index: 10;
 }
 
 .NavBarItems{
